[package]
name = "garnish_lang_annotations_collector"
description = "Utility to organize garnish annotations with related tokens."
version = "0.12.0"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/garnish-annotation-collector"
documentation = "https://github.com/garnish-lang/garnish-annotation-collector"
repository = "https://github.com/garnish-lang/garnish-annotation-collector"
license-file = "./LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garnish_lang_traits = { version = "0.0.19-alpha" }
garnish_lang_compiler = { version = "0.0.19-alpha" }
